# takos

./: .gitignore  Cargo.toml  Makefile.toml  README.md  link.x  runner.fish
.cargo/: config.toml
src/: allocator.rs  console.rs  display.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  paging.rs  pic.rs
src/allocator/: block_allocator.rs  frame_allocator.rs  used_frame_allocator.rs
src/async_task/: executor.rs  mod.rs
src/keyboard/: commands.rs  decoder.rs  driver.rs  keycodes.rs
tako_async/: Cargo.toml
tako_async/src/: executor.rs  lib.rs  timer.rs
tako_usb/: Cargo.toml
tako_usb/src/: controller.rs  lib.rs  register.rs  xhci.rs
tako_usb/src/xhci/: commands.rs  contexts.rs  device_info.rs  registers.rs  transfer.rs  trb.rs
tako_usb/src/xhci/transfer/: standard.rs
tako_usb/src/xhci/trb/: address_device_command.rs  command_completion_event.rs  data.rs  disable_slot_command.rs  enable_slot_command.rs  link.rs  noop.rs  noop_command.rs  normal.rs  setup.rs  status.rs  transfer_event.rs
takobl/: Cargo.toml
takobl/.cargo/: config.toml
takobl/src/: main.rs  paging.rs
takobl_api/: Cargo.toml
takobl_api/src/: lib.rs
takos/: Cargo.toml  README.md
takos/src/: allocator.rs  console.rs  display.rs  filesystem.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  log.rs  main.rs  paging.rs  pci.rs  pic.rs  text.rs  usb.rs
takos/src/allocator/: block_allocator.rs  frame_allocator.rs  fresh_frame_allocator.rs  used_frame_allocator.rs
takos/src/async_task/: mod.rs
takos/src/filesystem/: blockdevice.rs  fat.rs  ramdisk.rs
takos/src/keyboard/: commands.rs  decoder.rs  driver.rs  keycodes.rs  layout.rs  typer.rs
takos/src/multitask/: scheduler.rs
