cargo-features = ["per-package-target"]

[package]
name = "takos"
version = "0.1.0"
edition = "2021"
# default-target = "./x86_64-takos.json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
takobl_api = { path = "../takobl_api" }
x86_64 = "0.14.10"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"
