[package]
name = "tako_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
x86_64 = "0.14.10"

[dependencies.futures-util]
version = "0.3.28"
default-features = false
features = ["alloc"]

[dependencies.thingbuf]
version = "0.1.4"
default-features = false
features = ["alloc", "static"]
