[package]
name = "tako_usb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
x86_64 = "0.14.10"
spin = "0.9.8"
tako_async = { path = "../tako_async" }
async-trait = "0.1.72"
log = "0.4.19"
indenter = "0.3.3"

[dependencies.futures]
version = "0.3.28"
default-features = false
features = ["alloc"]
